--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,18 @@
 <resources>
     <string name="app_name">First_AndroidApp</string>
-    <string name="myscreen">Этот текст в майскрин хмл</string>
+    <string name="myscreen">Добавить элемент на экран</string>
     <string name="helloworld">Привет Мир!</string>
-    <string name="action_settings">settings</string>
-    <string name="action_item1">item1</string>
-    <string name="action_item2">item2</string>
+    <string name="action_settings">Ностройке</string>
+    <string name="action_item1">Какая-то дичь</string>
+    <string name="action_item2">Другая дичь</string>
+    <string name="menu_visible">make visible menu items</string>
+    <string name="smile">Грустная харя</string>
+    <string name="click_on_sad">Нажми на грустняшку</string>
+    <string name="action_menu_stable">Стабильное место</string>
+    <string name="left">Слева</string>
+    <string name="center">Центр</string>
+    <string name="right">Справа</string>
+    <string name="add">Добавить</string>
+    <string name="clear">Очистить</string>
+    <string name="enter_name">Кнопка</string>
 </resources>
